--- a/Japanese_handwritten_text_detection_horizontal_vertical.ipynb
+++ b/Japanese_handwritten_text_detection_horizontal_vertical.ipynb
@@ -51,9 +51,6 @@
         "input_file = \"/content/gdrive/MyDrive/pictures/fix.png\"\n",
         "\n",
         "\n",
-        "#### 3.setting ####\n",
-        "horizontal = 0\n",
-        "OCR_mode = 0\n",
         "\n",
         "\n",
         "# 膨張処理の設定\n",
@@ -266,8 +263,8 @@
       "source": [
         "from tensorflow.keras.models import load_model\n",
         "model = load_model(\"/content/gdrive/MyDrive/hiragana_recognition_cnn.h5\")\n",
-        "image_width = 32  # ここを変更。使用する学習済みモデルと同じwidth（横幅）を指定\n",
-        "image_height = 32 # ここを変更。使用する学習済みモデルと同じheight（縦の高さ）を指定"
+        "image_width = 32\n",
+        "image_height = 32"
       ],
       "metadata": {
         "id": "MJuY5sDHwp4m"
