--- a/OCR_1.ipynb
+++ b/OCR_1.ipynb
@@ -41,7 +41,7 @@
       "metadata": {
         "id": "T-3EfNAluwR2"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,18 +76,18 @@
       "metadata": {
         "id": "xuoIjaMxwZze"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model = load_model(\"/content/gdrive/MyDrive/hiragana_recognition_cnn.h5\")"
+        "model = load_model(\"\")"
       ],
       "metadata": {
         "id": "I-I5KxULu76h"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "fihb9ji47R27"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,13 +109,13 @@
       "metadata": {
         "id": "M9nigHM87R9x"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "out_dir = \"/content/gdrive/MyDrive/hiraganas\"\n",
+        "out_dir = \"\"\n",
         "result = []\n",
         "\n",
         "# List all image files in the directory\n",
@@ -152,7 +152,7 @@
           "height": 144
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -172,7 +172,7 @@
       "metadata": {
         "id": "lr_HvwFrlpfi"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,17 +181,8 @@
       "metadata": {
         "id": "9yrV1N0mlpmL"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## 同じ種類のデータだから処理がすくないかもだけどカラーの新しい写真だと処理が増えそう"
-      ],
-      "metadata": {
-        "id": "foFnZccklp0V"
-      }
     },
     {
       "cell_type": "markdown",
@@ -218,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -350,7 +341,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -381,7 +372,7 @@
       "metadata": {
         "id": "f2kIqAY_e2tE"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -396,7 +387,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -453,7 +444,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -479,7 +470,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,7 +495,7 @@
           "height": 457
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -852,7 +843,7 @@
           "height": 70
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -872,12 +863,12 @@
     {
       "cell_type": "code",
       "source": [
-        "image = cv2.imread(\"/content/gdrive/MyDrive/pictures/tsukau.png\")"
+        "image = cv2.imread(\"\")"
       ],
       "metadata": {
         "id": "JRW1qR0XyBUq"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -902,7 +893,7 @@
       "metadata": {
         "id": "KwHxvosYmcDa"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -945,7 +936,7 @@
           "height": 805
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1004,283 +995,8 @@
       "metadata": {
         "id": "p4gMObJ7wubx"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "chars"
-      ],
-      "metadata": {
-        "id": "jusW4sAjTBSB",
-        "outputId": "7e78d13b-4983-4d29-db26-e0fd4f461069",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[(array([[[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         ...,\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]]], dtype=float32),\n",
-              "  (222, 553, 330, 216)),\n",
-              " (array([[[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         ...,\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]]], dtype=float32),\n",
-              "  (848, 453, 269, 354)),\n",
-              " (array([[[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         ...,\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]]], dtype=float32),\n",
-              "  (1094, 461, 113, 158)),\n",
-              " (array([[[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         ...,\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]],\n",
-              "  \n",
-              "         [[0.],\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          ...,\n",
-              "          [0.],\n",
-              "          [0.],\n",
-              "          [0.]]], dtype=float32),\n",
-              "  (1375, 573, 250, 298)),\n",
-              " (array([[[0.        ],\n",
-              "          [0.        ],\n",
-              "          [0.14901961],\n",
-              "          ...,\n",
-              "          [0.        ],\n",
-              "          [0.        ],\n",
-              "          [0.        ]],\n",
-              "  \n",
-              "         [[0.01568628],\n",
-              "          [0.5529412 ],\n",
-              "          [0.9254902 ],\n",
-              "          ...,\n",
-              "          [0.        ],\n",
-              "          [0.        ],\n",
-              "          [0.        ]],\n",
-              "  \n",
-              "         [[0.34901962],\n",
-              "          [0.96862745],\n",
-              "          [1.        ],\n",
-              "          ...,\n",
-              "          [0.        ],\n",
-              "          [0.        ],\n",
-              "          [0.        ]],\n",
-              "  \n",
-              "         ...,\n",
-              "  \n",
-              "         [[0.        ],\n",
-              "          [0.        ],\n",
-              "          [0.        ],\n",
-              "          ...,\n",
-              "          [0.9490196 ],\n",
-              "          [0.33333334],\n",
-              "          [0.        ]],\n",
-              "  \n",
-              "         [[0.        ],\n",
-              "          [0.        ],\n",
-              "          [0.        ],\n",
-              "          ...,\n",
-              "          [0.43137255],\n",
-              "          [0.00784314],\n",
-              "          [0.        ]],\n",
-              "  \n",
-              "         [[0.        ],\n",
-              "          [0.        ],\n",
-              "          [0.        ],\n",
-              "          ...,\n",
-              "          [0.        ],\n",
-              "          [0.        ],\n",
-              "          [0.        ]]], dtype=float32),\n",
-              "  (1464, 481, 81, 83))]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1298,7 +1014,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1326,7 +1042,7 @@
       "metadata": {
         "id": "YsSGe_y9OR1a"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1356,7 +1072,7 @@
           "height": 1000
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
