--- a/OCR_2.ipynb
+++ b/OCR_2.ipynb
@@ -33,9 +33,6 @@
         "outputId": "547a3590-9fc0-4ef2-c916-51af2f1d6999"
       },
       "source": [
-        "\n",
-        "#### 1.import ####\n",
-        "\n",
         "import os\n",
         "import cv2\n",
         "import numpy as np\n",
@@ -46,33 +43,19 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n",
         "\n",
-        "#### ２．set up pictures ####\n",
+        "\n",
         "input_file = \"\"\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "# 膨張処理の設定\n",
-        "#【横書き】大まかな文字領域の検出（ブロック検出）のための膨張処理（カーネルサイズ・膨張処理回数）の設定\n",
-        "block_kernel_hight = 5  # カーネルの縦の高さ\n",
-        "block_kernel_width = 5  # カーネルの横の幅\n",
-        "block_iterations = 4    # 膨張処理回数\n",
-        "\n",
-        "# 輪郭のカット設定\n",
-        "# ブロック検出：文字領域検出した輪郭の「横幅」が、以下の範囲なら輪郭を残す\n",
-        "block_horizontal_height_minimum = 5  # 最小値（ピクセル）\n",
-        "block_horizontal_height_max = 1000   # 最大値（ピクセル）\n",
-        "\n",
-        "# ブロック検出：文字領域検出した輪郭の「縦の高さ」が、以下の範囲なら輪郭を残す\n",
-        "block_vertical_height_minimum = 5  # 最小値（ピクセル）\n",
-        "block_vertical_height_max = 1000   # 最大値（ピクセル）\n",
-        "\n",
-        "\n",
-        "\n",
-        "####  ４．大まかな文字領域の検出（ブロック検出） ####\n",
-        "# 画像から、ブロック検出をおこないます\n",
-        "# 「block_ROI_img〜.png」（ブロック検出画像）を作成します\n",
-        "# 「block_text-detection.png」（ブロック検出の結果を、元の画像に描画した画像）を作成します\n",
+        "# setting for morphological dilation\n",
+        "  block_kernel_hight = 5  # height of kernel\n",
+        "  block_kernel_width = 5  # width of kernel\n",
+        "  block_iterations = 4    # num of iteration\n",
+        "  #height range of rectangle area\n",
+        "  block_horizontal_height_minimum = 5\n",
+        "  block_horizontal_height_max = 1000\n",
+        "  #width range of rectangle area\n",
+        "  block_vertical_height_minimum = 5\n",
+        "  block_vertical_height_max = 1000 ）\n",
         "\n",
         "\n",
         "# Process for detecting and extracting character regions from images\n",
@@ -88,13 +71,13 @@
         "  # convert to monochrome image\n",
         "  retval, img_binary = cv2.threshold(img_gray, 0, 255, cv2.THRESH_BINARY_INV + cv2.THRESH_OTSU)\n",
         "\n",
-        "  # 白部分の膨張処理（Dilation）：モルフォロジー変換 - 2値画像を対象\n",
-        "  kernel = np.ones((block_kernel_hight, block_kernel_width),np.uint8) # カーネル（構造的要素）：全要素の値が1の縦横が任意のピクセルのカーネル\n",
+        "  # morphological dilation for binary image\n",
+        "  kernel = np.ones((block_kernel_hight, block_kernel_width),np.uint8)\n",
         "  img_dilation = cv2.dilate(img_binary,kernel,iterations = block_iterations)\n",
         "\n",
         "  print('\\n【Binarization】')\n",
         "\n",
-        "  # 膨張処理後の2値化画像の表示\n",
+        "  # show the picture after morphological dilation\n",
         "  plt.imshow(cv2.cvtColor(img_dilation, cv2.COLOR_BGR2RGB))\n",
         "  plt.show()\n",
         "\n",
@@ -134,27 +117,16 @@
         "    #result.append([x, y, w, h])\n",
         "    result.append([x_fix,y_fix,w_fix,h_fix])\n",
         "\n",
-        "\n",
-        "  # 画面に矩形の輪郭を描画 （描画機能）\n",
         "  for x, y, w, h in result:\n",
         "      cv2.rectangle(img, (x, y), (x+w, y+h), (100, 255, 100), 3)\n",
-        "\n",
-        "\n",
-        "  # 解説用のコメント（文字領域の輪郭検出・抽出）\n",
         "  print('\\n【Text detection・Contours】')\n",
-        "\n",
-        "  # 文字領域の輪郭検出・抽出結果の表示\n",
         "  plt.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))\n",
         "  plt.savefig('block_text-detection.png', dpi=300)\n",
         "  plt.show()\n",
         "\n",
-        "\n",
-        "\n",
-        "## 大まかな文字領域の検出（ブロック検出）の関数（block_contours）の実行\n",
-        "block_contours (input_file)\n",
-        "\n"
+        "block_contours (input_file)\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,13 +196,12 @@
       "metadata": {
         "id": "MJuY5sDHwp4m"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#### ８．画像判定のためのプログラム ####\n",
         "folder = ['あ','い','う','え','お',\n",
         "              'か','き','く','け','こ',\n",
         "              'さ','し','す','せ','そ',\n",
@@ -296,7 +267,7 @@
         "id": "1b12GzkTqXVG",
         "outputId": "ac8eaf18-91fa-404e-b75d-19cd229099b6"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -326,7 +297,7 @@
         "id": "0ILE6V9rDiCo",
         "outputId": "28bb6e31-3de9-46ab-8ae2-c318535482f8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -375,7 +346,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +379,7 @@
       "metadata": {
         "id": "a7lyREWGHD3X"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +394,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,7 +420,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +446,7 @@
         "id": "J59_WENyHEAi",
         "outputId": "1ce035ac-8329-4d39-817b-e02041961173"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -755,7 +726,7 @@
         "id": "r8-pq8QVHED8",
         "outputId": "a95eb0e2-5d1a-4635-d511-1739244854f4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +740,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#毎回写真を消す\n",
+        "#delete picture every time\n",
         "file_list = glob.glob(\"block_ROI_img*png\")\n",
         "for file in file_list:\n",
         "  os.remove(file)"
@@ -777,7 +748,7 @@
       "metadata": {
         "id": "iTaZCK73qXWC"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
